crates/solidity/testing/snapshots/bindings_output/constants/top_level/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected ContractKeyword or ImportKeyword or InterfaceKeyword or LibraryKeyword or PragmaKeyword.
    ╭─[input.sol:9:1]
    │
  9 │ ╭─▶ enum Direction { NORTH, SOUTH, EAST, WEST }
    ┆ ┆   
 13 │ ├─▶ Direction constant MY_DIRECTION = Direction.EAST;
    │ │                                                       
    │ ╰─────────────────────────────────────────────────────── Error occurred here.
────╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ contract Constants {
   │          ────┬────  
   │              ╰────── def: 1
 2 │     function test() public {
   │              ──┬─  
   │                ╰─── def: 2
 3 │         assert(MY_DIRECTION != Direction.NORTH);
   │         ───┬── ──────┬─────    ────┬──── ──┬──  
   │            ╰──────────────────────────────────── ref: built-in
   │                      │             │       │    
   │                      ╰────────────────────────── unresolved
   │                                    │       │    
   │                                    ╰──────────── unresolved
   │                                            │    
   │                                            ╰──── unresolved
 4 │         assert(MY_UINT > 100);
   │         ───┬── ───┬───  
   │            ╰──────────── ref: built-in
   │                   │     
   │                   ╰───── unresolved
 5 │         require(msg.sender == MY_ADDRESS);
   │         ───┬─── ─┬─ ───┬──    ─────┬────  
   │            ╰────────────────────────────── ref: built-in
   │                  │     │           │      
   │                  ╰──────────────────────── ref: built-in
   │                        │           │      
   │                        ╰────────────────── ref: built-in
   │                                    │      
   │                                    ╰────── unresolved
───╯
